--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,6 @@
 @import './normalize.scss';
+@import '_vars.scss';
+
 .container {
   padding-right: 15px;
   padding-left: 15px;
@@ -44,8 +46,26 @@ span{
   font-size: 14px;
   font-weight: 500;
 }
+.fz-14{
+  font-size: 14px;
+}
+.fz-16{
+  font-size: 16px;
+}
+.violet{
+  color: #5B44DF;
+}
 .grey, .gray{
   color: #808191;
+}
+.text-center{
+  text-align: center;
+}
+.fw-400{
+  font-weight: 400;
+}
+.fw-500{
+  font-weight: 500;
 }
 .fw-600{
   font-weight: 600;
@@ -59,4 +79,22 @@ span{
   width: 14px;
   height: 14px;
   margin-left: .25rem;
+}
+
+.component-icon{
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin: 0;
+}
+.btn-main{
+  border: none;
+  border-radius: .75rem;
+  padding: 1.25rem;
+  width: 100%;
+  font-size: 16px;
+}
+.btn-purple{
+  background-color: $purple;
+  color: $white;
 }
