--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,2 +1,10 @@
 $purple: #5B44DF;
+$purple_hover: #4c35ce;
+$purple_deep: #3723aa;
 $white: #ffffff;
+$lightgrey: #E6E6EA;
+$lightgray: #E6E6EA;
+$gray: #808191;
+$grey: #808191;
+$link_color: #482EEF;
+$error: rgb(216, 44, 44);
