--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -8,3 +8,6 @@ $gray: #808191;
 $grey: #808191;
 $link_color: #482EEF;
 $error: rgb(216, 44, 44);
+$green: #1BC5BD;
+$yellow: #E1A509;
+$red: #D70000;
