--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -61,6 +61,12 @@ $font_sizes: 14, 16, 18, 22, 24, 32, 36, 48;
   .fz-#{$size}{
     font-size: #{$size}px;
   }
+  // .w-#{$size}{
+  //   width: #{$size}px;
+  // }
+  // .h-#{$size}{
+  //   height: #{$size}px;
+  // }
 }
 
 $font_weights: 400, 500, 600, 700, 800, 900;
@@ -76,6 +82,16 @@ $font_weights: 400, 500, 600, 700, 800, 900;
 .grey, .gray{
   color: $gray;
 }
+.green{
+  color: $green;
+}
+.yellow{
+  color: $yellow;
+}
+.red{
+  color: $red;
+}
+
 .text-center{
   text-align: center;
 }
@@ -100,6 +116,12 @@ $font_weights: 400, 500, 600, 700, 800, 900;
   padding: 1.25rem;
   width: 100%;
   font-size: 16px;
+  cursor: pointer;
+  
+  // prevent selection
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 
   &:hover{
     // box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
@@ -108,8 +130,8 @@ $font_weights: 400, 500, 600, 700, 800, 900;
   }
 }
 .btn-purple{
-  background-color: $purple;
-  color: $white;
+  background-color: $purple !important;
+  color: $white !important;
 
   &:hover{
     background: $purple_hover;
@@ -123,4 +145,8 @@ button.disabled{
 }
 .error{
   color: $error;
+}
+
+.cursor{
+  cursor: pointer;
 }
