--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -76,7 +76,7 @@ $font_weights: 400, 500, 600, 700, 800, 900;
   }
 }
 
-.violet{
+.purple{
   color: $purple;
 }
 .grey, .gray{
@@ -117,17 +117,11 @@ $font_weights: 400, 500, 600, 700, 800, 900;
   width: 100%;
   font-size: 16px;
   cursor: pointer;
-  
+
   // prevent selection
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-
-  &:hover{
-    // box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
-    // -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
-    // -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
-  }
 }
 .btn-purple{
   background-color: $purple !important;
@@ -149,4 +143,114 @@ button.disabled{
 
 .cursor{
   cursor: pointer;
+}
+
+.diagram{
+  height: 14rem;
+  width: 14rem;
+  flex-grow: 1;
+  position: relative;
+  margin: auto;
+
+  .diagram-layer{
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+}
+
+.block-head{
+  border-bottom: 1px solid $lightgray;
+  padding: 2.25rem 2rem .75rem 2rem;
+
+  h3{
+    margin: 0;
+  }
+}
+
+table{
+  font-weight: 600;
+  font-size: 14px;
+  width: 100%;
+
+  thead{
+    border-bottom: 1px solid #E6E6EA;
+  }
+
+  td{
+    padding: 1rem;
+    word-wrap: break-word;
+  }
+
+  tbody td{
+    font-weight: 600;
+  }
+  
+  td:first-child{
+    padding-left: 2rem;
+  }
+  td:last-child{
+    padding-right: 2rem;
+  }
+}
+.sentiment-bearish,
+.sentiment-bullish,
+.sentiment-neutral{
+  font-weight: 400;
+  text-transform: capitalize;
+}
+.sentiment-bearish{
+  color: $red;
+}
+.sentiment-bullish{
+  color: $green;
+}
+.sentiment-neutral{
+  color: $yellow;
+}
+
+.stats{
+  display: flex;
+  grid-gap: 1rem;
+  flex-direction: column;
+}
+.stats-circle{
+  width: 0.75rem;
+  height: 0.75rem;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 10px;
+}
+.stats-elem{
+  display: flex;
+  align-items: center;
+
+  .key{
+    flex-grow: 1;
+  }
+}
+
+.chart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chart-inner{
+  display: flex;
+  align-items: center;
+  padding: 3rem 0;
+  grid-gap: 1.5rem;
+
+  .diagram{
+    flex-grow: 0;
+    margin: 0;
+  }
 }
