--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -169,6 +169,9 @@ button.disabled{
 .block-head{
   border-bottom: 1px solid $lightgray;
   padding: 2.25rem 2rem .75rem 2rem;
+  display: flex;
+  grid-gap: 1rem;
+  align-items: center;
 
   h3{
     margin: 0;
@@ -180,7 +183,7 @@ table{
   font-size: 14px;
   width: 100%;
 
-  thead{
+  thead td{
     border-bottom: 1px solid #E6E6EA;
   }
 
@@ -217,9 +220,11 @@ table{
 }
 
 .stats{
-  display: flex;
+  display: grid;
+  grid-template-columns: 8rem 8rem;
   grid-gap: 1rem;
-  flex-direction: column;
+  // column-gap: 1rem;
+  // flex-direction: column;
 }
 .stats-circle{
   width: 0.75rem;
@@ -246,11 +251,28 @@ table{
 .chart-inner{
   display: flex;
   align-items: center;
-  padding: 3rem 0;
-  grid-gap: 1.5rem;
+  padding: 2rem 0;
+  grid-gap: 2.5rem;
+  justify-content: center;
+  position: relative;
 
   .diagram{
     flex-grow: 0;
     margin: 0;
   }
+  .no-data{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+  }
+}
+.icon-32{
+  width: 32px;
+  height: 32px;
 }
