--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -289,3 +289,11 @@ table{
 .vue-notification.error{
   color: white;
 }
+
+.page.text-center{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
